<resources>
    <string name="app_name">PracticeMapBox</string>
    <string name="action_settings">Settings</string>
    <string name="accessTokenMapBox">pk.eyJ1IjoibW9pc2VzMDciLCJhIjoiY2luMjNjZWMzMGI5MnY3a2tkZ25udHJoMCJ9.SSZYVKUPTtwPZmolPq0xNw</string>
    <string name="current_location">Current location</string>
    <string name="search">Search</string>
    <string name="wanted_find">He wanted to find</string>
    <string name="not_found_data">Not found data</string>
    <string name="loading">Loading...</string>
    <string name="searching">Searching...</string>
    <string name="your_direction">Your direction</string>
    <string name="you_are">You are in...</string>
    <string name="search_current_direction">Search current direction</string>
    <string name="remove">Remove</string>
    <string name="change_style">Change style</string>
</resources>
