<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:orderInCategory="1"
        android:icon="@mipmap/ic_action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"/>

    <item
        android:id="@+id/action_draw_route"
        android:title="@string/app_name"
        android:orderInCategory="3"
        android:icon="@mipmap/ic_route"
        app:showAsAction="ifRoom|withText"
        android:visible="false"/>

    <item
        android:id="@+id/action_remove_markers"
        android:title="@string/remove"
        android:orderInCategory="2"
        android:icon="@mipmap/ic_remove"
        app:showAsAction="ifRoom|withText"
        android:visible="false"/>

    <item
        android:id="@+id/action_current_location"
        android:title="@string/current_location"
        android:orderInCategory="4"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_current_direction"
        android:title="@string/search_current_direction"
        android:orderInCategory="5"
        app:showAsAction="never"/>



    <item
        android:id="@+id/action_change_style"
        android:title="@string/change_style"
        android:orderInCategory="6"
        app:showAsAction="never"/>

</menu>
